--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'//2.1.2对应1.3
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.0.0" //
@@ -30,7 +30,7 @@ task clean(type: Delete) {
 ext {
     siteUrl = 'https://github.com/Golabe/IntentManager'
     gitUrl = 'https://github.com/Golabe/IntentManager'
-    group = "top.golabe.IntentManager"
+    group = "top.golabe.intent.IntentManager"
     version = "1.0.0"
     id = 'Golabe'
     name = 'yuequan'
